--- a/templates/index.html
+++ b/templates/index.html
@@ -1,1 +1,21 @@
-<!doctype html><html lang="en"><head><meta charset="utf-8"/><link rel="icon" href="./static/favicon.ico"/><meta name="viewport" content="width=device-width,initial-scale=1"/><meta name="theme-color" content="#000000"/><meta name="description" content="Web site created using create-react-app"/><link rel="apple-touch-icon" href="./static/logo192.png"/><link rel="manifest" href="./static/manifest.json"/><title>Blue Vending Machine Challenge</title><script defer="defer" src="./static/js/main.d8a509c8.js"></script><link href="./static/css/main.10dd31d0.css" rel="stylesheet"></head><body><div id="root"></div></body></html>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <link rel="icon" href="./static/favicon.ico" />
+    <meta name="viewport" content="width=device-width,initial-scale=1" />
+    <meta name="theme-color" content="#000000" />
+    <meta
+      name="description"
+      content="Web site created using create-react-app"
+    />
+    <link rel="apple-touch-icon" href="./static/logo192.png" />
+    <link rel="manifest" href="./static/manifest.json" />
+    <title>Blue Vending Machine Challenge</title>
+    <script defer="defer" src="./static/js/main.c4d6baac.js"></script>
+    <link href="./static/css/main.bb13a54b.css" rel="stylesheet" />
+  </head>
+  <body>
+    <div id="root"></div>
+  </body>
+</html>
